--- a/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
@@ -21,11 +21,13 @@
 
             //Default location
             includePatientsCccNumberIfExists();
-            jq('#default-location').click(defaultLocationChange);//Default location
             jq('#upnError').hide();
             jq("#upn-concept input[type=text]").blur(validatePatientIdentifiers);
             jq('#hcw-cadre select').change(cadreSelected);
             jq('#tbl-other-cadre').hide();
+            jq('#referral-to select').change(referralSelected);
+            jq('#tbl-this-facility').hide();
+            jq('#tbl-other-facility').hide();
 
         });
         //Checkbox to prepopulate default location
@@ -36,7 +38,6 @@
                 getField('facility.value').val(default_location);
             }else{
                 getField('facility.value').val("");
-                clearHiddenSections(jq('#default-location'));
             }
         };
 
@@ -83,22 +84,38 @@
                     cccNumber = data;
                     getField('upn-concept.value').val(cccNumber);
                     getField('upn-concept.value').prop("readonly", true);
-                  }
+                }
             });
         }
 
         var cadreSelected = function () {
             var val = jq(this).val();
-                 // Specify other
+            // Specify other
             if (val == 5622){
                 jq('#tbl-other-cadre').show();
             }else{
                 jq('#tbl-other-cadre').hide();
             }
         }
+
+        var referralSelected = function () {
+            var val = jq(this).val();
+            var default_location = "<lookup expression="kenyaemr.location()" />";
+            if (val == 164407) {
+                jq('#tbl-other-facility').show();
+                jq('#tbl-this-facility').hide();
+                getField('this-facility.value').val("");
+            }if(val == 163266){
+                jq('#tbl-this-facility').show();
+                getField('this-facility.value').val(default_location);
+                jq('#tbl-other-facility').hide();
+                getField('other-facility.value').val("");
+            }
+        }
+
         //Before Submit
         beforeSubmit.push(function() {
-                return true;
+            return true;
         });
         //Clear hidden sections
         clearHiddenSections = function(parentObj) {
@@ -128,20 +145,34 @@
                     <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete"/>
                 </td>
                 <td>
-                <ifMode mode="EDIT">
-                    <script type="text/javascript">
-                        jq(function(){
+                    <ifMode mode="EDIT">
+                        <script type="text/javascript">
+                            jq(function(){
 
-                            //Other Cadre
-                            var val = getField("hcw-cadre.value").val();
-                             if (val == 5622){
-                                jq('#tbl-other-cadre').show();
-                            }else{
-                                jq('#tbl-other-cadre').hide();
-                            }
-                        });
-                    </script>
-                </ifMode>
+                                //Other Cadre
+                                var val = getField("hcw-cadre.value").val();
+                                if (val == 5622){
+                                    jq('#tbl-other-cadre').show();
+                                }else{
+                                    jq('#tbl-other-cadre').hide();
+                                }
+
+                                //facility referral
+                                var val = getField("referral-to.value").val();
+                                var default_location = "<lookup expression="kenyaemr.location()" />";
+                                if (val == 164407) {
+                                    jq('#tbl-other-facility').show();
+                                    jq('#tbl-this-facility').hide();
+                                    getField('this-facility.value').val("");
+                                }if(val == 163266){
+                                    jq('#tbl-this-facility').show();
+                                    jq('#tbl-other-facility').hide();
+                                    getField('other-facility.value').val("");
+                                    getField('this-facility.value').val(default_location);
+                                }
+                            });
+                        </script>
+                    </ifMode>
                 </td>
             </tr>
         </table>
@@ -152,17 +183,42 @@
             <legend>Linkage to care</legend>
             <table id="tbl-care-status">
                 <tr>
-                    <td>&#160;&#160;&#160;&#160;&#160;&#160;Facility linked to: </td>
-                    <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                            <obs id="facility" conceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/>
-                    </td><td>  <input type="checkbox" name="default-facility" id="default-location" /> This facility</td>
-                    <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; CCC number:
+                    <td>Referral to:  &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                        <obs id="referral-to" conceptId="160481AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             answerConceptIds="163266AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                               164407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             style="dropdown" answerLabels="This health facility,Other health facility" />
+                    </td>
                     <td>
-                    <div style="display:none"> <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false"/></span> </div>
-
-                    <div> <obs class="upn" conceptId="162053" id="upn-concept" size ="20" required="true"/></div>
-                        <span id="upnError" class="error"></span>
+                        <br/>
+                        <table id="tbl-other-facility">
+                            <tr>
+                                <td>  &#160;&#160;&#160; Specify :
+                                    <obs id="other-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
+                                    &#160;&#160;&#160;
+                                </td>
+                            </tr>
+                        </table>
+                    </td> <td>
+                    <br/>
+                    <table id="tbl-this-facility">
+                        <tr>
+                            <td>  &#160;&#160;&#160; Name :
+                                <obs id="this-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
+                                &#160;&#160;&#160;
+                            </td>
+                        </tr>
+                    </table>
                 </td>
+                    <td>
+                        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; CCC number:
+                    <td>
+                        <div style="display:none"> <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false"/></span> </div>
+
+                        <div> <obs class="upn" conceptId="162053" id="upn-concept" size ="20" required="true"/></div>
+                        <span id="upnError" class="error"></span>
+                    </td>
                     </td>
                 </tr>
                 <td></td>
@@ -199,11 +255,11 @@
                         />
                     </td>
                 </tr> <tr>
-                    <td><strong>ART start date : </strong>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="art-date" conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showTime="false" required="true" allowFutureDates="false"
-                        />
-                    </td>
-                </tr>
+                <td><strong>ART start date : </strong>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <obs class="art-date" conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showTime="false" required="true" allowFutureDates="false"
+                    />
+                </td>
+            </tr>
             </table>
         </fieldset>
 
