Changed referral specify label to Facility name and updated linkage page distortion

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -1387,7 +1387,7 @@
                         <br/>
                         <table id="tbl-other-facility">
                             <tr>
-                                <td>  &#160;&#160;&#160; Specify :
+                                <td>  &#160;&#160;&#160; Facility name :
                                     <obs id="other-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
                                     &#160;&#160;&#160;
                                 </td>
