--- a/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
@@ -190,25 +190,21 @@
                              style="dropdown" answerLabels="This health facility,Other health facility" />
                     </td>
                     <td>
-                        <br/>
-                        <table id="tbl-other-facility">
-                            <tr>
-                                <td>  &#160;&#160;&#160; Specify :
+                       <div id="tbl-other-facility">
+
+                                  &#160;&#160;&#160; Facility name :
                                     <obs id="other-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
                                     &#160;&#160;&#160;
-                                </td>
-                            </tr>
-                        </table>
+
+                        </div>
                     </td> <td>
-                    <br/>
-                    <table id="tbl-this-facility">
-                        <tr>
-                            <td>  &#160;&#160;&#160; Name :
+                     <div id="tbl-this-facility">
+
+                              &#160;&#160;&#160; Name :
                                 <obs id="this-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
                                 &#160;&#160;&#160;
-                            </td>
-                        </tr>
-                    </table>
+
+                    </div>
                 </td>
                     <td>
                         &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
